fixed spacing

--- a/kar/src/app/globals.css
+++ b/kar/src/app/globals.css
@@ -19,7 +19,12 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
+  -webkit-font-smoothing: antialiased;
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
